--- a/3D-STG.vcxproj.filters
+++ b/3D-STG.vcxproj.filters
@@ -132,9 +132,6 @@
     <ClInclude Include="Source\enemies\enemymanager.hpp">
       <Filter>enemies</Filter>
     </ClInclude>
-    <ClInclude Include="Source\ship\ship.hpp">
-      <Filter>ship</Filter>
-    </ClInclude>
     <ClInclude Include="Source\display_info\display_info.hpp">
       <Filter>display_info</Filter>
     </ClInclude>
@@ -152,6 +149,12 @@
     </ClInclude>
     <ClInclude Include="Source\object_types\drawable_object.hpp">
       <Filter>object_types</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\object_types\icollidable.hpp">
+      <Filter>object_types</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\ship\ship.hpp">
+      <Filter>ship</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
